# os-libuv1

./: libuv1_1.24.1.orig.tar.gz.delta  libuv1_1.24.1.orig.tar.gz.id  libuv1_1.40.0.orig.tar.gz.delta  libuv1_1.40.0.orig.tar.gz.id  libuv1_1.44.2.orig.tar.gz.delta  libuv1_1.44.2.orig.tar.gz.id  libuv1_1.9.1.orig.tar.gz.delta  libuv1_1.9.1.orig.tar.gz.id  meson.build
debian/: README.source  README.source.org  changelog  control  copyright  fill.copyright.blanks.yml  libuv1-dev.install  libuv1.symbols  rules
debian/patches/: disable_ipv6_test.patch  fix-cve-2021-22918  fix-cve-2024-24806  kfreebsd.patch  mips-epoll_pwait.diff  path_max_zero_st_size  pexip_fix_spawn_test  series  skip_test_if_no_pty.patch
debian/tests/: control  run-tests
